fix: hand was overflowing on mobiles with landscape mode

--- a/nimalia.css
+++ b/nimalia.css
@@ -435,7 +435,7 @@
     transform: scale(1);
   }
 }
-@media only screen and (max-width: 830px) {
+@media only screen and (max-width: 1024px) {
   #player-tables .player-table {
     grid-template-columns: 1fr !important;
   }
