--- a/src/player-table/_player-table.scss
+++ b/src/player-table/_player-table.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 830px) {
+@media only screen and (max-width: 1024px) {
 	#player-tables {
 		.player-table {
 			grid-template-columns: 1fr !important;
